misc: remove deprecated Java URL API usage